--- a/css/creative.css
+++ b/css/creative.css
@@ -155,7 +155,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/campuscopy.jpg');
+  background-image: url('../img/campus3.png');
   text-align: center;
   color: white;
 }
