--- a/css/creative.css
+++ b/css/creative.css
@@ -59,7 +59,7 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 aside {
   padding: 50px 0;
@@ -410,3 +410,38 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #222222;
 }
+
+/* Speaker Session*/
+
+
+.team { margin-left:-2%;width:100%;
+}
+.team li{
+  list-style-type:none;
+  display:inline-block;
+  margin:20px;
+  font-size:1.4em;
+  text-align:center;
+}
+  
+  .team li img{
+    transition:.3s;
+    -webkit-transition:.3s;
+    -moz-transition:.3s;
+    border-radius:100%;
+    border:3px solid #fff;
+    box-shadow:1px 1px 3px 1px rgba(0,0,0,.1);
+    width:120px;display:block;margin:10px auto;
+    filter:grayscale(0%);-webkit-filter:grayscale(0%);
+    -mozfilter:grayscale(0%);
+    }
+      .team li img:hover{
+        transition:.3s;
+        -webkit-transition:.3s;
+        -moz-transition:.3s;
+        cursor:pointer;filter:grayscale(100%);
+        -webkit-filter:grayscale(100%);
+        -mozfilter:grayscale(100%);
+        }ul{list-style-type:none;
+        }
+          div.col-md-8.col-md-offset-2{width:100%!important;margin-left:0!important;}
