2017 index file add

--- a/css/creative.css
+++ b/css/creative.css
@@ -155,7 +155,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/campus3.png');
+  background-image: url('../img/urx3.jpg');
   text-align: center;
   color: white;
 }
