--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -200,8 +200,8 @@ video {
 }
 
 .btn-secondary {
-  background-color: #cd9557;
-  border-color: #cd9557;
+  background-color: #EF3A46;
+  border-color: #EF3A46;
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
